src/objects/sma__MATerritoryAggregationSetting__c.object
<CustomObject>
    <fields>
        <fullName>sma__MAMarkerLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Marker Layer</label>
        <referenceTo>sma__MASavedQry__c</referenceTo>
        <relationshipLabel>MA Territory Aggregation Settings</relationshipLabel>
        <relationshipName>MATerritoryAggregationSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__MATerritoryLayer__c</fullName>
        <label>MapAnything Territory Layer</label>
        <referenceTo>sma__MALayer__c</referenceTo>
        <relationshipLabel>MA Territory Aggregation Settings</relationshipLabel>
        <relationshipName>MATerritoryAggregationSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__ValueField__c</fullName>
        <label>Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MA Territory Aggregation Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Territory Aggregation Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>